Updated layout and responsiveness

--- a/app/sass/globals/_boilerplate.scss
+++ b/app/sass/globals/_boilerplate.scss
@@ -7,4 +7,11 @@
 	align-items: center;
 	justify-content: center;
 	background-color: u.$color-bg;
+
+	.options {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: center;
+	}
 }
