--- a/app/sass/components/_buttons.scss
+++ b/app/sass/components/_buttons.scss
@@ -4,7 +4,8 @@ button {
 	cursor: pointer;
 	font-family: inherit;
 	font-weight: u.$fw-bold;
-	font-size: 5rem;
+	font-size: 4rem;
+	margin: 0.1rem;
 	padding: 1rem 2rem;
 	border: 0;
 	border-radius: 0.5rem;
